alignments for mobile and desktop, this should now fix.

--- a/app/speedtest/speed-test.css
+++ b/app/speedtest/speed-test.css
@@ -22,23 +22,25 @@ body {
   align-items: center;
   width: 100vw;
   min-height: 100vh;
-  padding: 20px 0;
   position: relative;
 }
 
 /* Header Text */
 .header-text {
+  width: 70%;
+  margin: 8vh auto 20px auto;
+  /* Auto margin centers block elements */
   text-align: center;
   margin-bottom: 20px;
 }
 
 .header-text h1 {
-  font-size: 2rem;
+  font-size: 1.5rem;
   margin-bottom: 10px;
 }
 
 .header-text p {
-  font-size: 1rem;
+  font-size: 0.8rem;
   text-transform: none;
   color: #333;
 }
@@ -50,15 +52,14 @@ body {
   align-items: center;
   justify-content: center;
   width: 40vw;
-  padding: 20px;
   border-radius: 10px;
-  gap: 20px;
-  margin-top: 20px;
+  gap: 10px;
 }
 
 .iterations-row {
   display: flex;
   flex-direction: row;
+  font-weight: 500;
   align-items: center;
   justify-content: center;
   gap: 20px;
@@ -155,11 +156,27 @@ body {
   display: none;
 }
 
+.result-container h2 {
+  font-size: 1.2rem;
+  text-align: center;
+  color: #333;
+}
+
+
 .result-container.visible {
   display: block;
 }
 
+#copy-to-clipboard {
+  display: block;
+  margin: 20px auto;
+  /* Centers horizontally */
+  text-align: center;
+}
+
 /* Network Details and Average Results */
+
+
 .network-details,
 .average-result {
   margin-bottom: 20px;
@@ -214,7 +231,6 @@ button {
 }
 
 button:hover {
-  background: #c41214;
   transform: scale(1.05);
 }
 
@@ -229,6 +245,19 @@ button:hover {
 
 /* Mobile Layout */
 @media (max-width: 768px) {
+
+  .menu-btn{
+    right: -2rem !important;;
+  }
+
+  .header-text h1 {
+    font-size: 1.5rem;
+  }
+
+  .header-text p {
+    font-size: 1.2rem;
+  }
+
   .input-container {
     width: 90vw;
     padding: 10px;
@@ -236,12 +265,28 @@ button:hover {
 
   .iterations-row {
     flex-direction: column;
+    width: 55vw;
+    overflow: hidden;
+  }
+
+  .form-class {
+    text-align: center;
+  }
+
+  .label-iterations {
+    display: block;
+    text-align: center;
+  }
+
+  #iterations {
+    font-size: 2rem;
+    text-align: center;
   }
 
   button,
   input {
-    min-width: 80vw !important;
-    font-size: 0.8rem;
+    min-width: 50vw !important;
+    font-size: 1.2rem;
   }
 
   h1 {
